--- a/src/index.css
+++ b/src/index.css
@@ -235,7 +235,7 @@ ol {
 }
 
 .home-hero {
-  background-image: url("./assets/hero/home.png");
+  background-image: url("./assets/hero/home.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
