--- a/src/components/bottom-banner/bottom-banner.css
+++ b/src/components/bottom-banner/bottom-banner.css
@@ -1,5 +1,5 @@
 .bottom-banner {
-  padding: 200px 80px;
+  padding: 150px 80px;
   position: relative;
   z-index: 1;
 }
@@ -22,6 +22,17 @@
   font-weight: 700;
   font-family: var(--font-satoshi);
   line-height: 48px;
+}
+
+@media (max-width: 756px) {
+  .bottom-banner {
+    padding: 100px 30px;
+  }
+
+  .bottom-banner h3 {
+    font-size: 32px;
+    line-height: 36px;
+  }
 }
 
 /* corporate-responsibility */
