--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,7 @@ h5,
 h6 {
   margin-bottom: 0;
 }
-ul,
-ol {
+ul{
   list-style-type: none;
 }
 
@@ -148,6 +147,40 @@ ol {
 /* our firm quite  X*/
 
 
+.overlay-privacy {
+  content: "";
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  padding-bottom: 250px;
+  padding-top: 320px;
+}
+.privacy{
+  font-family: var(--font-satoshi);
+}
+
+
+
+.privacy ol li {
+  font: 500 18px var(--font-satoshi);
+  color: var(--ass);
+  padding-bottom: 20px;
+  padding-left: 0;
+  margin-left: 0;
+}
+
+.privacy ol li span{
+  font-weight: 900;
+}
+.privacy ol li ul{
+list-style-type: disc;  font-weight: 900;
+padding-left: 0;
+padding-top: 5px;
+}
+.privacy ol li ul li{
+padding-bottom: 0;
+}
 
 
 .header-contact-button {
@@ -252,7 +285,7 @@ ol {
 }
 
 .hero-industry {
-  padding: 240px 0 140px;
+  padding: 300px 0 180px;
 }
 .hero-small-heading {
   font-size: clamp(3rem, 8vw, 32px);
