--- a/src/components/PageComponents/OurFirm/Counter/counter.css
+++ b/src/components/PageComponents/OurFirm/Counter/counter.css
@@ -1,15 +1,7 @@
-:root {
-  --primary: #033195;
-  --primary-deep: #04224B;
-  --secondary: #1282a2;
-  --ass: #606060;
-  --black-light: #212121;
-  --white: #ffffff;
-  --font-satoshi: "Satoshi", sans-serif;
-}
 
 
-.item{
+
+.counter-item{
   border-right:1px solid white;
   text-align: center;
   display: flex;
@@ -20,24 +12,24 @@
 }
 
 @media (max-width: 992px) {
-  .item {
+  .counter-item {
     border-right: none;
   }
 }
 
 
-.item .counter_number{
+.counter-item .counter_number{
   font: 700 24px var(--font-satoshi);
   line-height: 32px;
 }
 
-.item span{
+.counter-item span{
   font: 500 16px var(--font-satoshi);
   line-height: 21px;
 }
 
 
 
-.item:last-child{
+.counter-item:last-child{
   border:none
 }
